--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>ru.netology</groupId>
-    <artifactId>bonus_calculator</artifactId>
+    <artifactId>bonus-calculator</artifactId>
     <version>1.0-SNAPSHOT</version>
     <dependencies>
         <dependency>
@@ -26,7 +26,7 @@
         <plugins>
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.12.4</version>
+                <version>2.22.2</version>
                 <executions>
                     <execution>
                         <id>default-test</id>
@@ -39,5 +39,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
